# ollama_api_call

./: Cargo.toml
examples/: c01-chat.rs
src/: chat.rs  error.rs  gpts.rs  lib.rs  oa_client.rs
