[package]
name = "openai_ollama"
version = "0.1.0"
edition = "2021"

[lint.hint]
unused = "allow"

[dependencies]
async-openai = "0.19.1"
derive_more = { version = "0.99.17", features = ["from"] }
rpc-router = "0.1.3"
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_with = { version = "3.7.0", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
